# stm32_freertos

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  toolchain.cmake
linker/: linker.ld  linker_script.ld
src/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp
startup/: CMakeLists.txt  startup.c  startup.s
